[REF] position on menu

--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -233,7 +233,7 @@
         </record>
 
         <!-- top level menu: no parent -->
-        <menuitem id="main_openacademy_menu" name="Open Academy"/>
+        <menuitem sequence="1" id="main_openacademy_menu" name="Open Academy"/>
 
         <!-- A first level in the left side menu is needed
              before using action= attribute -->
