--- a/views/templates.xml
+++ b/views/templates.xml
@@ -14,27 +14,35 @@
             </t>
         </template>
 
-        <template id="listing">
+        <template id="course">
             <t t-call="website.layout">
                 <t t-set="title">Openacademy</t>
                 <div class="oe_structure"/>
                 <div class="oe_structure">
-                    <ul>
-                        <p>
-                            <t t-esc="root"/>
-                        </p>
-                    </ul>
+                    <div class="container">
+                        <t t-foreach="course" t-as="cour">
+                            <p>
+                                <a t-attf-href="/openacademy/openacademy/{{ slug(cour) }}">
+                                    <t t-esc="cour.name"/>
+                                </a>
+                            </p>
+                        </t>
+                    </div>
                 </div>
             </t>
         </template>
-        <!-- <template id="object"> -->
-        <!--   <h1><t t-esc="object.display_name"/></h1> -->
-        <!--   <dl> -->
-        <!--     <t t-foreach="object._fields" t-as="field"> -->
-        <!--       <dt><t t-esc="field"/></dt> -->
-        <!--       <dd><t t-esc="object[field]"/></dd> -->
-        <!--     </t> -->
-        <!--   </dl> -->
-        <!-- </template> -->
+
+        <template id="info">
+            <t t-call="website.layout">
+                <t t-set="title">Openacademy</t>
+                <div class="oe_structure"/>
+                <div class="oe_structure">
+                    <div class="container">
+                        <h3><t t-esc="course.name"/></h3>
+                        <p><t t-esc="course.description"/></p>
+                    </div>
+                </div>
+            </t>
+        </template>
     </data>
 </odoo>
