--- a/views/templates.xml
+++ b/views/templates.xml
@@ -1,5 +1,11 @@
 <odoo>
     <data>
+        <!--<template id="mystyle" name="My style" inherit_id="website.assets_frontend">
+            <xpath expr="link[last()]" position="after">
+                <link href="/openacademy/static/src/css/webview.css" rel="stylesheet" type="text/css"/>
+            </xpath>
+        </template>-->
+
         <template id="index">
             <t t-call="website.layout">
                 <t t-set="title">Openacademy</t>
@@ -21,11 +27,13 @@
                 <div class="oe_structure">
                     <div class="container">
                         <t t-foreach="course" t-as="cour">
-                            <p>
-                                <a t-attf-href="/openacademy/openacademy/{{ slug(cour) }}">
-                                    <t t-esc="cour.name"/>
-                                </a>
-                            </p>
+                            <div class="col-md-4 col-xs-12">
+                                <h1>
+                                    <a t-attf-href="/openacademy/openacademy/{{ slug(cour) }}">
+                                        <t t-esc="cour.name"/>
+                                    </a>
+                                </h1>
+                            </div>
                         </t>
                     </div>
                 </div>
@@ -38,8 +46,12 @@
                 <div class="oe_structure"/>
                 <div class="oe_structure">
                     <div class="container">
-                        <h3><t t-esc="course.name"/></h3>
-                        <p><t t-esc="course.description"/></p>
+                        <h3>
+                            <t t-esc="course.name"/>
+                        </h3>
+                        <p>
+                            <t t-esc="course.description"/>
+                        </p>
                     </div>
                 </div>
             </t>
